--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="featured_crew">Featured Crew</string>
     <string name="runtime">Runtime</string>
     <string name="genre">Genre</string>
+    <string name="error_text">Opps! Something has wrong !</string>
 </resources>
