--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="add_widget">Add widget</string>
     <string name="no_data">Favorite List Not Found</string>
     <string name="favorite_movie_list">Favorite Movie List</string>
+    <string name="tv_favorite_list">Tv Favorite List</string>
 
 </resources>
