--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,10 +44,12 @@
     <string name="favorite_movie_list">Favorite Movie List</string>
     <string name="tv_favorite_list">Tv Favorite List</string>
     <string name="content_title_reminder">Well .. sure do not want a check today?</string>
+    <string name="content_title_release_reminder">Want to check new movie today ?</string>
     <string name="content_text_reminder">Come on, open it again here, get information related to the latest movies and tv shows today.</string>
     <string name="sub_text_reminder">Daily Reminder</string>
     <string name="daily_reminder">Daily Reminder</string>
     <string name="release_reminder">Release Reminder</string>
+    <string name="has_been_release_today">has been released today. Check it out !</string>
     <string name="key_daily">daily</string>
     <string name="key_release">release</string>
     <string name="key_love">love</string>
@@ -56,4 +58,5 @@
     <string name="summary_on_reminder">Reminder is active, new movie notifications will be reminded every 8 o\'clock in the morning.</string>
     <string name="summary_off_daily">Afraid to forget to check a movie? Activate to remind you every 7 o\'clock in the morning.</string>
     <string name="summary_on_daily">You will be reminded to stay tune every 7 o\'clock in the morning.</string>
+    <string name="no_movies_today">There is no movie release today.</string>
 </resources>
